ajout sandbox dans la pipeline